thefractalspace/static/style.css
/*LA CEST PA A MOI*/

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, button, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	font: inherit;
	font-size: 100%;
	vertical-align: baseline;
    text-decoration: none;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* Gilroy Medium */
@font-face {
    font-family: "Gilroy";
    src: url("/static/fonts/gilroy/Gilroy-Medium.eot");
    src: local("Gilroy Medium"), local("Gilroy-Medium"), url("/static/fonts/gilroy/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Medium.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Medium.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Medium.ttf") format("truetype");
    font-weight: 500;
    font-style: normal;
}
/* END Gilroy Medium */


/* Gilroy Bold */
@font-face {
    font-family: "Gilroy";
        src: url("/static/fonts/gilroy/Gilroy-Bold.eot");
        src: local("Gilroy Bold"), local("Gilroy-Bold"), url("/static/fonts/gilroy/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Bold.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Bold.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Bold.ttf") format("truetype");
    font-weight: bold;
    font-style: normal;
}

/* Gilroy FAT*/
@font-face {
    font-family: "Gilroy";
    src: url("/static/fonts/gilroy/Gilroy-Black.eot");
    src: local("Gilroy Black"), local("Gilroy-Black"), url("/static/fonts/gilroy/Gilroy-Black.eot?#iefix") format("embedded-opentype"), url("/static/fonts/gilroy/Gilroy-Black.woff2") format("woff2"), url("/static/fonts/gilroy/Gilroy-Black.woff") format("woff"), url("/static/fonts/gilroy/Gilroy-Black.ttf") format("truetype");
    font-weight: 900;
    font-style: normal;
}

/* END Gilroy Bold *

/*LA CEST A MOI*/

:root {
    --blue-900: #f7fafc;
    --blue-800: #e2f2f7;
    --blue-700: #e2e8f0;
    --blue-500: #a0aec0;
    --blue-400: #7488a5;
    --blue-300: #516482;
    --blue-200: #354157;
    --blue-100: #1a202c;
    --orange: #ffa500;
}

* {
    /*border: 1px solid white !important;*/
    border: 0 solid var(--blue-100);
    box-sizing: border-box;
}

:focus {
    border: 2px solid var(--orange);
    transition:
            border-bottom-color 0.3s,
            border-left-color 0.3s,
            border-right-color 0.3s,
            border-top-color 0.3s;
}

em {
    font-style: italic;
}

body {
    margin: 0;
    padding: 0;
    font-family: "Gilroy", sans-serif;
    color: var(--blue-900);
    min-height: 100vh;
    background: var(--blue-100);
}

.narrow_container {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    min-height: 100vh;
    border-top: 2px solid var(--orange);
}

a {
    text-decoration: none;
    color: var(--orange);
}

a:hover {
    text-decoration: underline;
}

.top_bar {
    width: 80%;
    padding: 1.5rem 0;
    align-items: center;
    margin: 0 auto
    /*background: var(--blue-100);*/
}

.bar__title {
    color: var(--blue-700);
    position: center;
    font-weight: bold;
}

.top_bar .navbar a {
    margin-left: 2rem;
    padding: 0;
    font-weight: bold;
    line-height: 1.5rem;
}


.brouse__container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
    grid-gap: 1rem;
}

.brouse__card {
    display: flex;
    flex-direction: column;
    border-radius: 0.25rem;
    background: var(--blue-200);
    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3), 0 10px 10px -5px rgba(0, 0, 0, 0.12);
}

.brouse__card:hover {
    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.74);
    z-index: 2;
}


.card__img {
    width: 100%;
    border-radius: 0.25rem 0.25rem 0 0;
}

.card__title {
    position: center;
    text-align: right;
    font-size: 0.75rem;
    padding: 1rem;
    color: var(--blue-500);
}

.navbar {
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
}

.navbar a {
    margin: 0 0 0 0.5rem ;
    font-weight: bold;
}


.aside__title {
    color: var(--blue-700);
    font-size: 1.5rem;
    font-weight: bold;
}

.aside__subtitle {
    display: block;
    color: var(--blue-500);
    margin-top: 0.5rem;
}

.fractal {
    /*width: 78%;*/
    /*height: 100vh;*/
    object-fit: cover;
    object-position: center;
}

.img_cover {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.container {
    flex-grow: 1;
    padding: 1rem;
    padding-top: 0;
    display: flex;
}

aside {
    /*width: 22%;*/
    margin-left: 1rem;
    margin-bottom: 0.5rem;
    /*padding: 0.8rem;*/
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    flex-grow: 1;
}


.aside__spec {
    margin-top: 2rem;
}

.aside__spec li {
    margin-top: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.aside__spec li .spec__label {
    color: #cbd5e0;
    padding-right: 2rem;
}

.aside__spec li span:not(.spec__label) {
    text-align: right;
}

.gradient-container {
    display: flex;
}
.color-rect {
    width: 1.5rem;
    height: 1.5rem;
}


.download {
    margin-top: 1.5rem;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.download__button {
    display: flex;
    justify-content: center;
    background-color: #38a169;
    color: var(--blue-900);
    border-radius: 0.25rem;
    padding: 0.5rem 0.75rem 0.5rem 0.5rem;
    border: 2px solid transparent;
}

.download__button:focus {
    border: 2px solid var(--orange);
}

.separate_two {
    display: flex;
    justify-content: space-between;
}
.flex--center {
    display: flex;
    justify-content: center;
}

.title--about {
    font-size: 2rem;
    color: var(--orange);
    font-weight: bold;
}

.section__title--about {
    font-size: 1.5rem;
    margin-top: 1.5rem;
    font-weight: bold;
}

.p--about {
    margin-top: 1rem;
    width: 50%;
    text-align: justify;
    line-height: 1.25rem;
}

.brouse__footer {
    display: flex;
    justify-content: space-between;
    padding: 2rem 2rem 0 2rem;
    font-weight: bold;
}

.generate {
    height: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /*margin: 20% auto 0 auto;*/
}

.generate__title {
    font-size: 5em;
    font-weight: bold;
    width: max-content;
    line-height: 0.7em;
}

form {
    width: 80%;
}

.generate_input {
    height: 3em;
    width: 100%;
    border-radius: 1.5em;
    padding: 0.5em 1.5em;
    margin: 4em 0;
    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.8);
    /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.8),*/
    /*            -3px -3px 5px 3px rgba(255, 255, 255, 0.4);*/
}

.generate + p {
    max-width: 50vw;
    text-align: center;
    margin: 2rem auto 0 auto;
}

picture {
    display: block;
}

.icon {
    display: inline;
    height: 1em;
    padding: 0 0.25em;
}

.rounded {
    border-radius: 0.25rem;
}

.narrow {
    width: 75%
}
@media (max-width: 640px) {
    .top_bar {
        width: 100%;
        flex-direction: column;
        padding: 1.5rem 0;
        align-items: flex-start;
    }
    .bar__title {
        padding-bottom: 0.5rem;
    }
    .navbar {
        flex-wrap: wrap;
        justify-content: flex-end;
    }

    .top_bar .navbar {
        justify-content: flex-start;
    }
    .top_bar .navbar a {
        margin-right: 1rem;
        margin-left: 0;
        justify-content: flex-start;

    }

    .container {
        flex-direction: column;
        min-height: 100vh;
    }

    .fractal {
        width: 100%;
        height: 30vh;
    }
    aside {
        width: 100%;
        min-height: 70vh;
        justify-content: space-between;
    }

    .p--about {
        width: 100%;
    }

    .generate__title {
        font-size: 1.5rem;
        width: auto;
        margin: 0 auto;
        line-height: revert;
        text-align: center;
    }

    .generate_input {
        width: 100%;
    }

    .generate + p {
        width: 100%;
        max-width: 100%;
        font-size: .85rem;
        line-height: 1.3rem;
    }

    form {
        width: 100%;
    }
}


#bubbles-canvas {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -2;
}

#hidden-canvas {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 3;
    display: none;
}
.hitbox {
}

